--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "backend of React Native application tirelire, or piggybank in english",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
